--- a/DiscordGitToolbox.App/DiscordGitToolbox.App.csproj
+++ b/DiscordGitToolbox.App/DiscordGitToolbox.App.csproj
@@ -3,10 +3,17 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <Nullable>enable</Nullable>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Octokit" Version="0.43.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DiscordGitToolbox.Core\DiscordGitToolbox.Core.csproj" />
+      <ProjectReference Include="..\DiscordGitToolbox.GitHub\DiscordGitToolbox.GitHub.csproj" />
     </ItemGroup>
 
 </Project>
