--- a/DiscordGitToolbox.App/DiscordGitToolbox.App.csproj
+++ b/DiscordGitToolbox.App/DiscordGitToolbox.App.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.2" />
       <PackageReference Include="Octokit" Version="0.43.0" />
