--- a/DiscordGitToolbox.GitHub/DiscordGitToolbox.GitHub.csproj
+++ b/DiscordGitToolbox.GitHub/DiscordGitToolbox.GitHub.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="9.0.0" />
       <PackageReference Include="Octokit" Version="0.43.0" />
     </ItemGroup>
 
