--- a/DiscordGitToolbox.App/DiscordGitToolbox.App.csproj
+++ b/DiscordGitToolbox.App/DiscordGitToolbox.App.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+      <PackageReference Include="Discord.Net" Version="2.1.1" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.2" />
       <PackageReference Include="Octokit" Version="0.43.0" />
