--- a/DiscordGitToolbox.App/DiscordGitToolbox.App.csproj
+++ b/DiscordGitToolbox.App/DiscordGitToolbox.App.csproj
@@ -1,23 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Worker">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <UserSecretsId>dotnet-DiscordGitToolbox.App-768DC545-84F2-4862-A088-8670526D5074</UserSecretsId>
         <Nullable>enable</Nullable>
-        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
-      <PackageReference Include="Discord.Net" Version="2.1.1" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.2" />
-      <PackageReference Include="Octokit" Version="0.43.0" />
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+        <PackageReference Include="Discord.Net" Version="2.1.1" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.2" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.1" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\DiscordGitToolbox.Core\DiscordGitToolbox.Core.csproj" />
       <ProjectReference Include="..\DiscordGitToolbox.GitHub\DiscordGitToolbox.GitHub.csproj" />
     </ItemGroup>
-
 </Project>
