--- a/DiscordGitToolbox.App/DiscordGitToolbox.App.csproj
+++ b/DiscordGitToolbox.App/DiscordGitToolbox.App.csproj
@@ -8,13 +8,13 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
-        <PackageReference Include="Discord.Net" Version="2.1.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.2" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.1" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\DiscordGitToolbox.Core\DiscordGitToolbox.Core.csproj" />
+      <ProjectReference Include="..\DiscordGitToolbox.Discord\DiscordGitToolbox.Discord.csproj" />
       <ProjectReference Include="..\DiscordGitToolbox.GitHub\DiscordGitToolbox.GitHub.csproj" />
     </ItemGroup>
 </Project>
