--- a/.gitignore
+++ b/.gitignore
@@ -352,5 +352,6 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-# Custom (for testing)
+# Custom
 DiscordGitToolbox.App/out/
+DiscordGitToolbox.App/deployment_config.yaml
