--- a/DiscordGitToolbox.App/DiscordGitToolbox.App.csproj
+++ b/DiscordGitToolbox.App/DiscordGitToolbox.App.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.2" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.2" />
+        <PackageReference Include="NetEscapades.Configuration.Yaml" Version="2.0.0" />
     </ItemGroup>
 
     <ItemGroup>
