--- a/DiscordGitToolbox.Core/DiscordGitToolbox.Core.csproj
+++ b/DiscordGitToolbox.Core/DiscordGitToolbox.Core.csproj
@@ -6,4 +6,8 @@
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Discord.Net.WebSocket" Version="2.1.1" />
+    </ItemGroup>
+
 </Project>
