--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,4 +1,4 @@
-name: .NET Core
+name: Build and test
 
 on:
   push:
@@ -8,9 +8,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
@@ -21,5 +19,14 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release --no-restore
+    - name: Upload the built assemblies
+      uses: actions/upload-artifact@v1
+  
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Get the built assemblies
+      uses: actions/download-artifact@v1
     - name: Test
       run: dotnet test --no-restore --verbosity normal
