--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -21,6 +21,8 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     - name: Upload the built assemblies
       uses: actions/upload-artifact@v1
+      with:
+        name: built-assemblies
   
   test:
     runs-on: ubuntu-latest
@@ -28,5 +30,7 @@ jobs:
     steps:
     - name: Get the built assemblies
       uses: actions/download-artifact@v1
+      with:
+        name: built-assemblies
     - name: Test
       run: dotnet test --no-restore --verbosity normal
