--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -19,18 +19,20 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release --no-restore
-    - name: Upload the built assemblies
+    - name: Upload the project with built assemblies
       uses: actions/upload-artifact@v1
       with:
-        name: built-assemblies
+        name: project-with-built-assemblies
+        path: .
   
   test:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - name: Get the built assemblies
+    - name: Get the project with built assemblies
       uses: actions/download-artifact@v1
       with:
-        name: built-assemblies
+        name: project-with-built-assemblies
+        path: .
     - name: Test
       run: dotnet test --no-restore --verbosity normal
