--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build-debug:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -27,12 +27,18 @@ jobs:
   
   test:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-debug
     steps:
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.101
     - name: Get the project + built assemblies
       uses: actions/download-artifact@v1
       with:
         name: project-with-built-assemblies
         path: .
+    - name: Install dependencies
+      run: dotnet restore
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test --no-restore --no-build --verbosity normal
