--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -40,5 +40,5 @@ jobs:
         path: .
     - name: Install dependencies
       run: dotnet restore
-    - name: Test
-      run: dotnet test --no-restore --no-build --verbosity normal
+    - name: Run tests
+      run: dotnet test --no-restore --no-build --verbosity normal --logger GitHubActions
