--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -7,6 +7,17 @@ on:
     branches: [ master ]
 
 jobs:
+  test-publish-app:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.101
+    - name: Restore, build and publish
+      run: cd DiscordGitToolbox.App/ && dotnet publish -c Release -o out
+
   build-debug:
     runs-on: ubuntu-latest
     steps:
@@ -24,7 +35,7 @@ jobs:
       with:
         name: project-with-built-assemblies
         path: .
-  
+
   test:
     runs-on: ubuntu-latest
     needs: build-debug
